--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@
   
   
   .highlighted-name:hover {
-    color: #ffd700;
+    color: #ffd700; /* Slightly brighter gold */
+    border-bottom: 2px solid #ffd700;
   }
+
+  
+  
   
